feature: add store views
