# app/controllers/stores_controller.rb
@@ -1,0 +1,14 @@
+class StoresController < ApplicationController
+  before_action :set_store, only: %i[ show ]
+
+  def index
+    @stores = Store.page(params[:page])
+  end
+
+  def show; end
+
+  private
+    def set_store
+      @store = Store.find(params[:id])
+    end
+end
